--- a/package.json
+++ b/package.json
@@ -1,41 +1,53 @@
 {
-  "name": "ww-player",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "tsc",
-    "ci": "(npm run build && npm run rollup) & npm t & wait",
-    "prepublishOnly": "npm run ci && npm run rollup",
-    "publish": "npm run prepublishOnly & npm publish",
-    "test": "jest",
-    "rollup": "rollup -c"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/wwheel/player.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/wwheel/player/issues"
-  },
-  "homepage": "https://github.com/wwheel/player#readme",
-  "dependencies": {
-    "dashjs": "~3.1.1",
-    "es6-promise": "^4.2.8",
-    "hls.js": "~0.13.2",
-    "panolens": "~0.11.0",
-    "videojs-vtt.js": "~0.15.2"
-  },
-  "devDependencies": {
-    "@types/jest": "^26.0.16",
-    "jest": "^26.6.3",
-    "rollup": "^2.34.1",
-    "rollup-plugin-babel-minify": "^10.0.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.2"
-  }
+    "name": "ww-player",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "webpack --mode=production",
+        "build-cdn": "webpack --mode=production --dist=current && webpack --mode=production --dist=versioned",
+        "build-dev": "webpack --mode=development",
+        "build-dev-debug": "webpack --mode=development --debug",
+        "dev-server": "webpack-dev-server --mode=development --host 0.0.0.0",
+        "dev-server-debug": "webpack-dev-server --mode=development --debug --host 0.0.0.0",
+        "dev-server-test": "webpack-dev-server --mode=production --no-live-reload --host 0.0.0.0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/wwheel/player.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/wwheel/player/issues"
+    },
+    "homepage": "https://github.com/wwheel/player#readme",
+    "dependencies": {
+        "dashjs": "~3.1.1",
+        "es6-promise": "^4.2.8",
+        "hls.js": "~0.13.2",
+        "panolens": "~0.11.0",
+        "videojs-vtt.js": "~0.15.2"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.9.6",
+        "@babel/preset-env": "^7.9.6",
+        "@types/jest": "^26.0.16",
+        "babel-loader": "^8.1.0",
+        "cheerio": "^1.0.0-rc.3",
+        "copy-webpack-plugin": "^5.1.1",
+        "css-loader": "^3.4.2",
+        "html-webpack-plugin": "^4.3.0",
+        "jest": "^26.6.3",
+        "semver": "^7.3.2",
+        "style-loader": "^1.1.3",
+        "svg-url-loader": "^4.0.0",
+        "ts-jest": "^26.4.4",
+        "ts-loader": "8.3.0",
+        "typescript": "^4.1.2",
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.10.3"
+    }
 }
