--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,20 @@
 {
     "compilerOptions": {
-        "outDir": "dist",
+        "baseUrl": "./",
+        "outDir": "./dist/out-tsc",
+        "sourceMap": true,
+        "declaration": false,
+        "downlevelIteration": true,
+        "experimentalDecorators": true,
+        "module": "esnext",
+        "moduleResolution": "node",
+        "importHelpers": true,
+        "target": "es2015",
         "lib": [
-            "es2016",
+            "es2018",
             "dom"
         ],
-        "sourceMap": true,
-        "declaration": true,
-        "experimentalDecorators": true
-    },
-    "include": [
-        "src/**/*.ts"
-    ]
+        "resolveJsonModule": true,
+        "allowSyntheticDefaultImports": true
+    }
 }
